# This file is part of crest.
# SPDX-Identifier: LGPL-3.0-or-later
#
# crest is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# crest is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with crest.  If not, see <https://www.gnu.org/licenses/>.

subdir('qcg')
subdir('dynamics')
subdir('calculator')
subdir('optimize')
subdir('algos')
subdir('parsing')
subdir('qmhelpers')
subdir('graphs') 
subdir('legacy_algos')


srcs += files(
  'atmasses.f90',
  'axis_module.f90',
  'biasmerge.f90',
  'bondconstraint.f90',
  'ccegen.f90',
  'classes.f90',
  'cleanup.f90',
  'compress.f90',
  'confcross.f90',
  'confopt.f90',
  'confparse.f90',
  'constraining.f90',
  'cregen.f90',
  'crest_pars.f90',
  'data.f90',
  'ensemblecomp.f90',
  'entropic.f90',
  'entropy.f90',
  'eval_timer.f90',
  'filemod.f90',
  'flexi.f90',
  'freqmasses.f90',
  'geo.f90',
  'identifiers.f90',
  'intmodes.f',
  'io.f',
  'iomod.F90',
  'legacy_wrappers.f90',
  'ls_rmsd.f90',
  'marqfit.f90',
  'minitools.f90',
  'msmod.f90',
  'msreact.f90',
  'ncigeo.f90',
  'neighbor.f',
  'newcregen.f90',
  'ompmklset.F90',
  'printouts.f90',
  'prmat.f90',
  'progressbar.f90',
  'propcalc.f90',
  'quicksort.f90',
  'readl.f90',
  'rotcompare.f90',
  'scratch.f90',
  'sdfio.f90',
  'select.f90',
  'signal.c',
  'sigterm.f90',
  'sortens.f90',
  'spline.f90',
  'strucreader.f90',
  'symmetry2.f90',
  'symmetry_i.c',
  'syscheck.f90',
  'testmol.f90',
  'thermocalc.f90',
  'thermo.f90',
  'trackorigin.f90',
  'trialmd.f90',
  'utilities.f',
  'zdata.f90',
  'zsort.f90',
  'ztopology.f90',
)

prog += files(
  'crest_main.f90',
)
