# This file is part of crest.
# SPDX-Identifier: LGPL-3.0-or-later
#
# crest is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# crest is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with crest.  If not, see <https://www.gnu.org/licenses/>.

srcs += files(
  'singlepoint.f90',
  'dynamics.f90',
  'numhess.f90',
  'optimization.f90',
  'playground.f90',
  'crossing.f90',
  'refine.f90',
  'scan.f90',
  'search_1.f90',
  'search_mecp.f90',
  'setuptest.f90',
  'hessian_tools.f90',
  'ConfSolv.F90',
  'search_conformers.f90',
  'search_entropy.f90',
  'parallel.f90', 
)
