# This file is part of crest.
# SPDX-Identifier: LGPL-3.0-or-later
#
# crest is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# crest is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with crest.  If not, see <https://www.gnu.org/licenses/>.

srcs += files(
  'calculator.F90',
  'calc_type.f90',
  'constraints.f90',
  'gfn0_api.F90',
  'gfnff_api.F90',
  'lj.f90',
  'nonadiabatic.f90',
  'tblite_api.F90',
  'api_helpers.F90',
  'api_engrad.f90', 
  'gradreader.f90',
  'xtb_sc.f90',
  'generic_sc.f90',
)
